crates/pg_syntax/tests/snapshots/postgres_regress/equivclass@30.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table ec0 (ff int8 primary key, f1 int8, f2 int8);"
---
CreateStmt@0..57
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..16
    Ident@13..16 "ec0"
  Whitespace@16..17 " "
  Ascii40@17..18 "("
  ColumnDef@18..37
    Ident@18..20 "ff"
    Whitespace@20..21 " "
    TypeName@21..25
      Ident@21..25 "int8"
    Whitespace@25..26 " "
    Constraint@26..37
      Primary@26..33 "primary"
      Whitespace@33..34 " "
      Key@34..37 "key"
  Ascii44@37..38 ","
  Whitespace@38..39 " "
  ColumnDef@39..46
    Ident@39..41 "f1"
    Whitespace@41..42 " "
    TypeName@42..46
      Ident@42..46 "int8"
  Ascii44@46..47 ","
  Whitespace@47..48 " "
  ColumnDef@48..55
    Ident@48..50 "f2"
    Whitespace@50..51 " "
    TypeName@51..55
      Ident@51..55 "int8"
  Ascii41@55..56 ")"
  Ascii59@56..57 ";"

