crates/pg_syntax/tests/snapshots/postgres_regress/equivclass@32.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table ec2 (xf int8 primary key, x1 int8alias1, x2 int8alias2);"
---
CreateStmt@0..69
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..16
    Ident@13..16 "ec2"
  Whitespace@16..17 " "
  Ascii40@17..18 "("
  ColumnDef@18..37
    Ident@18..20 "xf"
    Whitespace@20..21 " "
    TypeName@21..25
      Ident@21..25 "int8"
    Whitespace@25..26 " "
    Constraint@26..37
      Primary@26..33 "primary"
      Whitespace@33..34 " "
      Key@34..37 "key"
  Ascii44@37..38 ","
  Whitespace@38..39 " "
  ColumnDef@39..52
    Ident@39..41 "x1"
    Whitespace@41..42 " "
    TypeName@42..52
      Ident@42..52 "int8alias1"
  Ascii44@52..53 ","
  Whitespace@53..54 " "
  ColumnDef@54..67
    Ident@54..56 "x2"
    Whitespace@56..57 " "
    TypeName@57..67
      Ident@57..67 "int8alias2"
  Ascii41@67..68 ")"
  Ascii59@68..69 ";"

