crates/pg_syntax/tests/snapshots/postgres_regress/equivclass@4.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create type int8alias1 (\n    input = int8alias1in,\n    output = int8alias1out,\n    like = int8\n);"
---
DefineStmt@0..97
  Create@0..6 "create"
  Whitespace@6..7 " "
  TypeP@7..11 "type"
  Whitespace@11..12 " "
  Ident@12..22 "int8alias1"
  Whitespace@22..23 " "
  Ascii40@23..24 "("
  Newline@24..25 "\n"
  Whitespace@25..29 "    "
  DefElem@29..49
    InputP@29..34 "input"
    Whitespace@34..35 " "
    Ascii61@35..36 "="
    Whitespace@36..37 " "
    TypeName@37..49
      Ident@37..49 "int8alias1in"
  Ascii44@49..50 ","
  Newline@50..51 "\n"
  Whitespace@51..55 "    "
  DefElem@55..77
    Ident@55..61 "output"
    Whitespace@61..62 " "
    Ascii61@62..63 "="
    Whitespace@63..64 " "
    TypeName@64..77
      Ident@64..77 "int8alias1out"
  Ascii44@77..78 ","
  Newline@78..79 "\n"
  Whitespace@79..83 "    "
  DefElem@83..94
    Like@83..87 "like"
    Whitespace@87..88 " "
    Ascii61@88..89 "="
    Whitespace@89..90 " "
    TypeName@90..94
      Ident@90..94 "int8"
  Newline@94..95 "\n"
  Ascii41@95..96 ")"
  Ascii59@96..97 ";"

