crates/pg_syntax/tests/snapshots/postgres_regress/equivclass@45.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create unique index ec1_expr2 on ec1((ff + 2 + 1));
---
IndexStmt@0..51
  Create@0..6 "create"
  Whitespace@6..7 " "
  Unique@7..13 "unique"
  Whitespace@13..14 " "
  Index@14..19 "index"
  Whitespace@19..20 " "
  Ident@20..29 "ec1_expr2"
  Whitespace@29..30 " "
  On@30..32 "on"
  Whitespace@32..33 " "
  RangeVar@33..36
    Ident@33..36 "ec1"
  Ascii40@36..37 "("
  Ascii40@37..38 "("
  IndexElem@38..48
    AExpr@38..48
      AExpr@38..44
        ColumnRef@38..40
          Ident@38..40 "ff"
        Whitespace@40..41 " "
        Ascii43@41..42 "+"
        Whitespace@42..43 " "
        AConst@43..44
          Iconst@43..44 "2"
      Whitespace@44..45 " "
      Ascii43@45..46 "+"
      Whitespace@46..47 " "
      AConst@47..48
        Iconst@47..48 "1"
  Ascii41@48..49 ")"
  Ascii41@49..50 ")"
  Ascii59@50..51 ";"

