crates/pg_syntax/tests/snapshots/postgres_regress/equivclass@47.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create unique index ec1_expr4 on ec1((ff + 4));
---
IndexStmt@0..47
  Create@0..6 "create"
  Whitespace@6..7 " "
  Unique@7..13 "unique"
  Whitespace@13..14 " "
  Index@14..19 "index"
  Whitespace@19..20 " "
  Ident@20..29 "ec1_expr4"
  Whitespace@29..30 " "
  On@30..32 "on"
  Whitespace@32..33 " "
  RangeVar@33..36
    Ident@33..36 "ec1"
  Ascii40@36..37 "("
  Ascii40@37..38 "("
  IndexElem@38..44
    AExpr@38..44
      ColumnRef@38..40
        Ident@38..40 "ff"
      Whitespace@40..41 " "
      Ascii43@41..42 "+"
      Whitespace@42..43 " "
      AConst@43..44
        Iconst@43..44 "4"
  Ascii41@44..45 ")"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

